--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -8,7 +8,8 @@
   "types": "dist/index.d.js",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc"
+    "build": "tsc",
+    "prepare": "pnpm build"
   },
   "dependencies": {
     "@trpc/client": "10.0.0-proxy-beta.7",
