--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@btravers/pdf-snapshot-service",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Main service",
   "author": "Benoit TRAVERS",
   "license": "MIT",
@@ -12,8 +12,9 @@
     "prepare": "pnpm build"
   },
   "dependencies": {
-    "@trpc/server": "10.0.0-proxy-beta.7",
+    "@trpc/server": "10.0.0-proxy-beta.8",
     "canvas": "^2.10.1",
+    "express": "^4.18.1",
     "pdfjs-dist": "^2.16.105",
     "pixelmatch": "^5.3.0",
     "pngjs": "^6.0.0",
@@ -21,6 +22,7 @@
     "zod": "^3.19.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
     "@types/node": "^16.11.51",
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1"
