--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -28,6 +28,7 @@
     "@types/node": "^16.11.62",
     "@types/rimraf": "^3.0.2",
     "jest": "28.1.3",
+    "testcontainers": "^8.13.2",
     "ts-jest": "^28.0.8",
     "typescript": "^4.8.3"
   },
