--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,38 +1,14 @@
 name: ci
 
-on:
-  push:
-    branches:
-      - 'main'
+on: [push]
 
 jobs:
-  docker:
-    runs-on: ubuntu-latest
-    steps:
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      -
-        name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      -
-        name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          push: true
-          tags: btravers/pdf-snapshot:latest
-          platforms: linux/amd64,linux/arm64
-
-  npm:
+  npm-test-jest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
+      - uses: docker/setup-qemu-action@v2
 
       - uses: actions/setup-node@v3
         with:
@@ -44,6 +20,4 @@ jobs:
           version: 7.12.2
           run_install: true
 
-      - run: pnpm --filter ./packages/jest publish --access public
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+      - run: pnpm --filter ./packages/jest test
