--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@btravers/pdf-snapshot-jest",
+  "version": "0.0.0",
   "description": "Jest extension",
   "author": "Benoit TRAVERS",
   "license": "MIT",
