--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -23,16 +23,16 @@
   "devDependencies": {
     "@btravers/pdf-snapshot-service": "workspace:^",
     "@types/dedent": "^0.7.0",
-    "@types/jest": "^28.1.3",
-    "@types/lodash": "^4.14.185",
+    "@types/jest": "^29.1.2",
+    "@types/lodash": "^4.14.186",
     "@types/node": "^16.11.62",
     "@types/rimraf": "^3.0.2",
-    "jest": "28.1.3",
-    "testcontainers": "^8.13.2",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.8.3"
+    "jest": "29.1.2",
+    "testcontainers": "^8.15.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.8.4"
   },
   "peerDependencies": {
-    "jest": "28"
+    "jest": ">= 28"
   }
 }
