--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -5,7 +5,7 @@
   "author": "Benoit TRAVERS",
   "license": "MIT",
   "main": "dist/index.js",
-  "types": "dist/index.d.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
