--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -5,7 +5,7 @@
   "author": "Benoit TRAVERS",
   "license": "MIT",
   "main": "dist/server.js",
-  "types": "dist/server.d.js",
+  "types": "dist/server.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc",
