--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -8,13 +8,13 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "prepare": "pnpm build",
     "test": "jest"
   },
   "dependencies": {
-    "@trpc/client": "10.0.0-proxy-beta.8",
-    "@trpc/server": "10.0.0-proxy-beta.8",
+    "@trpc/client": "10.0.0-rc.6",
+    "@trpc/server": "10.0.0-rc.6",
     "dedent": "^0.7.0",
     "lodash": "^4.17.21",
     "node-fetch-commonjs": "^3.2.4",
@@ -23,12 +23,12 @@
   "devDependencies": {
     "@btravers/pdf-snapshot-service": "workspace:^",
     "@types/dedent": "^0.7.0",
-    "@types/jest": "^29.1.2",
-    "@types/lodash": "^4.14.186",
-    "@types/node": "^16.11.62",
+    "@types/jest": "^29.2.2",
+    "@types/lodash": "^4.14.188",
+    "@types/node": "^18.11.9",
     "@types/rimraf": "^3.0.2",
-    "jest": "29.1.2",
-    "testcontainers": "^8.15.0",
+    "jest": "29.3.0",
+    "testcontainers": "^9.0.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4"
   },
