--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -8,14 +8,14 @@
   "types": "dist/server.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.build.json",
     "prepare": "pnpm build"
   },
   "dependencies": {
-    "@trpc/server": "10.0.0-proxy-beta.8",
-    "canvas": "^2.10.1",
-    "express": "^4.18.1",
-    "pdfjs-dist": "^2.16.105",
+    "@trpc/server": "10.0.0-rc.6",
+    "canvas": "^2.10.2",
+    "express": "^4.18.2",
+    "pdfjs-dist": "^3.0.279",
     "pixelmatch": "^5.3.0",
     "pngjs": "^6.0.0",
     "rimraf": "^3.0.2",
@@ -23,7 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/node": "^16.11.51",
+    "@types/node": "^18.11.9",
     "@types/pixelmatch": "^5.2.4",
     "@types/pngjs": "^6.0.1"
   }
