--- a/packages/jest/package.json
+++ b/packages/jest/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/btravers/pdf-snapshot.git"
+  },
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "tsc -p tsconfig.build.json",
